--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy==1.17.4
-ephem==3.7.7.0
-skyfield==1.11
-pytz==2019.1
-tzwhere==3.0.3
+numpy
+ephem
+skyfield
+pytz
+timezonefinder
+pandas
+wheel
 tqdm
